--- a/src/pages/shopping-cart/shopping-cart.html
+++ b/src/pages/shopping-cart/shopping-cart.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the Salad page.
+  Generated template for the ShoppingCart page.
 
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>{{selectedItem.title}}</ion-title>
+    <ion-title>shopping-cart</ion-title>
   </ion-navbar>
 
 </ion-header>
