--- a/src/pages/shopping-cart/shopping-cart.html
+++ b/src/pages/shopping-cart/shopping-cart.html
@@ -1,18 +1,48 @@
-<!--
-  Generated template for the ShoppingCart page.
 
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
+<ion-card>
+    <!--<ion-header>-->
+      <!--Wish List-->
+      <!--<ion-icon name="cart"></ion-icon>-->
+    <!--</ion-header>-->
 
-  <ion-navbar>
-    <ion-title>shopping-cart</ion-title>
-  </ion-navbar>
+  <ion-item>
+    <ion-list>
+      <ion-list-header>
+        Wish List
+      </ion-list-header>
+      <ion-item *ngFor="let item of shoppingList">
+        <span item-left>{{item.title}}</span>
+        <span item-right>{{item.unitPrice}}</span>
+        <ion-icon name="arrow-dropright-circle" item-right></ion-icon>
+        <ion-icon ion-item name="close-circle" item-right (click)="removeFromWishList()"></ion-icon>
+      </ion-item>
 
-</ion-header>
+    </ion-list>
+  </ion-item>
+
+  <ion-item>
+    <hr>
+    <!--<div padding-bottom="10px">-->
+      <!--<ion-item>-->
+        <!--<span item-left>Service charge (5%)</span>-->
+        <!--<span item-right>price</span>-->
+      <!--</ion-item>-->
+
+    <!--</div>-->
+
+    <div text-center padding-bottom="10px">
+      <h5>NET PRICE</h5>
+      <br>
+      <h1>Rs.{{totalPrize}}.00</h1>
+    </div>
+
+    <div text-center>
+      <button ion-button default round (click)="placeOrder()">Proceed</button>
+    </div>
 
 
-<ion-content padding>
 
-</ion-content>
+  </ion-item>
+
+
+</ion-card>
